--- a/AdamMIS/AdamMIS/appsettings.Development.json
+++ b/AdamMIS/AdamMIS/appsettings.Development.json
@@ -1,8 +1,26 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\AdamMISLogs\\log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplete": "{Timestamp}{Message}{NewLine:1}{Exception:1}"
+        }
+      }
+    ],
+    "Properties": {
+      "ApplicationName": "AdamMIS"
     }
   }
 }
