--- a/AdamMIS/AdamMIS/appsettings.json
+++ b/AdamMIS/AdamMIS/appsettings.json
@@ -1,9 +1,35 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\AdamMISLogs\\log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplete": "{Timestamp}{Message}{NewLine:1}{Exception:1}"
+        }
+      }
+    ],
+    "Properties": {
+      "ApplicationName": "AdamMIS"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "",
+    "Issuer": "ServayBasketApp",
+    "Audience": "ServayBasketApp users",
+    "ExpiryMinutes": 30
+  },
+  "ConnectionStrings": {
+
+    "MyConnection": "Server=KANDIL-PC\\SQL2022; User Id=sa; Password=adam; Database=AdamMIS;TrustServerCertificate=True"
+  }
 }
