--- a/AdamMIS/AdamMIS/appsettings.json
+++ b/AdamMIS/AdamMIS/appsettings.json
@@ -8,14 +8,14 @@
     },
     "WriteTo": [
 
-      {
-        "Name": "File",
-        "Args": {
-          "path": "D:\\AdamMISLogs\\log-.txt",
-          "rollingInterval": "Day",
-          "outputTemplete": "{Timestamp}{Message}{NewLine:1}{Exception:1}"
-        }
-      }
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "D:\\AdamMISLogs\\log-.txt",
+      //    "rollingInterval": "Day",
+      //    "outputTemplete": "{Timestamp}{Message}{NewLine:1}{Exception:1}"
+      //  }
+      //}
     ],
     "Properties": {
       "ApplicationName": "AdamMIS"
@@ -24,8 +24,8 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "",
-    "Issuer": "ServayBasketApp",
-    "Audience": "ServayBasketApp users",
+    "Issuer": "AdamMIS",
+    "Audience": "Adam Hospital Staff",
     "ExpiryMinutes": 30
   },
   "ConnectionStrings": {
