--- a/AdamMIS/AdamMIS/AdamMIS.csproj
+++ b/AdamMIS/AdamMIS/AdamMIS.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Reports\" />
+    <Folder Include="wwwroot\Uploads\Users\Images\" />
   </ItemGroup>
 
 </Project>
