--- a/AdamMIS/AdamMIS/appsettings.json
+++ b/AdamMIS/AdamMIS/appsettings.json
@@ -30,6 +30,6 @@
   },
   "ConnectionStrings": {
 
-    "MyConnection": "Server=KANDIL-PC\\SQL2022; User Id=sa; Password=adam; Database=AdamMIS;TrustServerCertificate=True"
+    "MyConnection": "Server=192.168.1.203; User Id=sa; Password=Sql@@AdamHospital$$2040; Database=AdamMIS;TrustServerCertificate=True"
   }
 }
