8/12/2025- Update User Secrets
8/12/2025- Update User Secrets

--- a/AdamMIS/AdamMIS/appsettings.json
+++ b/AdamMIS/AdamMIS/appsettings.json
@@ -23,7 +23,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "",
+    "Key": "WzD8^s$Jq9uKzL!v@dG6XeP#bT*mF3Rg",
     "Issuer": "AdamMIS",
     "Audience": "Adam Hospital Staff",
     "ExpiryMinutes": 30
