8/19/2025-Updating File URLS
8/19/2025-Updating File URLS

--- a/AdamMIS/AdamMIS/appsettings.json
+++ b/AdamMIS/AdamMIS/appsettings.json
@@ -6,17 +6,17 @@
         "Microsoft.AspNetCore": "Warning"
       }
     },
-    //"WriteTo": [
+    ////"WriteTo": [
 
-    //  //{
-    //  //  "Name": "File",
-    //  //  "Args": {
-    //  //    "path": "D:\\AdamMISLogs\\log-.txt",
-    //  //    "rollingInterval": "Day",
-    //  //    "outputTemplete": "{Timestamp}{Message}{NewLine:1}{Exception:1}"
-    //  //  }
-    //  //}
-    //],
+    ////  //{
+    ////  //  "Name": "File",
+    ////  //  "Args": {
+    ////  //    "path": "D:\\AdamMISLogs\\log-.txt",
+    ////  //    "rollingInterval": "Day",
+    ////  //    "outputTemplete": "{Timestamp}{Message}{NewLine:1}{Exception:1}"
+    ////  //  }
+    ////  //}
+    ////],
     "Properties": {
       "ApplicationName": "AdamMIS"
     }
