--- a/AdamMIS/AdamMIS/appsettings.json
+++ b/AdamMIS/AdamMIS/appsettings.json
@@ -32,4 +32,9 @@
 
     "MyConnection": "Server=192.168.1.203; User Id=sa; Password=Sql@@AdamHospital$$2040; Database=AdamMIS;TrustServerCertificate=True"
   }
+  //"GlpiApi": {
+  //  "BaseUrl": "http://localhost/glpi/apirest.php",
+  //  "AppToken": "YOUR_APP_TOKEN",
+  //  "UserToken": "YOUR_USER_TOKEN"
+  //}
 }
